# ftx-mcp

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  server.json
bootstrap/: install-chrome-cdp.ps1  issue-token.ps1  revoke-token.ps1  services.ps1  setup-mcp-client.ps1  setup.ps1  uninstall.ps1  verify-save-target.ps1
docs/: architecture.md  claude-code-setup.md  cowork-quick-install.md  release-notes-v1.0.2-draft.md  release-notes-v1.0.3-draft.md  runbook.md  security.md  tool-reference.md  troubleshooting.md  vscode-quick-install.md
service/: __init__.py  __main__.py  _cdp.py  _dpapi.py  _token_admin.py  auth.py  core.py  deploy_lock.py  http_app.py  main.py  mcp_app.py  optix_model.py  optix_templates.py  studio_guard.py
service/static/: dashboard.html
service/tests/: conftest.py  test_auth.py  test_bridge.py  test_bridge_find.py  test_bridge_writes.py  test_cdp.py  test_cdp_diff.py  test_composites.py  test_core.py  test_deploy_contract.py  test_deploy_lock.py  test_deploy_updatesvc.py  test_doctor.py  test_edit_modes.py  test_git_log_and_deploy_buffer.py  test_granular_tools.py  test_http_new_endpoints.py  test_http_v1_endpoints.py  test_main_refusal_matrix.py  test_mcp_app.py  test_mcp_scope.py  test_ocr.py  test_preflight.py  test_project_map.py  test_run_emulator.py  test_runtime_lifecycle.py  test_runtime_log_tail.py  test_save.py  test_skills_tools.py  test_studio_guard.py  test_token_admin.py
skills/optix-add-label/: SKILL.md
skills/optix-anchor-fill/: SKILL.md
skills/optix-apply-style/: SKILL.md
skills/optix-bind-alarm-active/: SKILL.md
skills/optix-blind-authoring/: SKILL.md
skills/optix-bound-toggle/: SKILL.md
skills/optix-expression-converter/: SKILL.md
skills/optix-known-pitfalls/: SKILL.md
skills/optix-nav-layout/: SKILL.md
skills/optix-scroll-layout/: SKILL.md
skills/optix-shape-appearance/: SKILL.md
skills/optix-templify/: SKILL.md
skills/optix-verify-loop/: SKILL.md
skills/optix-visual-regression/: SKILL.md
skills/optix-wire-command-button/: SKILL.md
studio-bridge/: StudioMCPBridge.cs
