[project]
name = "ftx-mcp"
version = "1.0.3"
description = "MCP server for authoring, previewing, and verifying FactoryTalk Optix Studio changes via the emulator, single Windows box."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.11"
authors = [
    { name = "ASQI" },
]
keywords = ["factorytalk", "optix", "mcp", "rockwell", "ot"]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Installation/Setup",
]
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.5",
    "uvicorn>=0.27",
    "mcp>=1.2",
    "psutil>=5.9",
    "websocket-client>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
]
visual = [
    "Pillow>=10",
]

[project.scripts]
ftx-mcp = "service.main:main"

[project.urls]
Homepage = "https://github.com/asqi-carter/ftx-mcp"
Issues = "https://github.com/asqi-carter/ftx-mcp/issues"
Specification = "https://github.com/asqi-carter/ftx-mcp/blob/main/docs/architecture.md"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["service"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = [
    "E501",  # let formatter handle line length
]

[tool.ruff.lint.per-file-ignores]
"service/tests/*" = ["S101"]  # asserts in tests are fine
"service/core.py" = ["N818", "N806"]  # domain exception names + Win32 constant naming
"service/deploy_lock.py" = ["N818", "N806"]  # LockHeld + Win32 constant naming
"service/mcp_app.py" = ["N818", "N806"]  # ScopeInsufficient exception + dispatch constant

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true  # mcp / asyncua may lack stubs

[tool.pytest.ini_options]
testpaths = ["service/tests"]
addopts = "-ra"
asyncio_mode = "strict"
